// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init


generator client {
  provider = "prisma-client-js"

}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ------User Model------//
enum Role {
  USER
  ADMIN
}

model User {
  id    String  @id @default(uuid())
  email String  @unique
  name  String?
  password String
  role  Role    @default(USER)
  isActive Boolean @default(true)

  orders        Order[]
  cart          Cart?
  reviews       Review[]
  refreshTokens RefreshToken[]
   passwordResetTokens PasswordResetToken[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("users")
}

model PasswordResetToken {
  id        String   @id @default(uuid())
  token     String   @unique
  userId    String
  expiresAt DateTime
  used      Boolean  @default(false)

  user User @relation(fields: [userId], references: [id])

  createdAt DateTime @default(now())

  @@map("password_reset_tokens")
}

model RefreshToken {
  id        String   @id @default(uuid())
  token     String   @unique
  userId    String
  expiresAt DateTime
  revoked   Boolean  @default(false) //gatau ini apa

  user User @relation(fields: [userId], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("refresh_tokens")
}

//------Product & Category Models------//
model Category {
  id   String @id @default(uuid())
  name String
  slug String @unique
  imageUrl String?
  publicId String?

  products  Product[]
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt

  @@map("categories")
}

enum ProductLabel {
  BEST_SELLER
  NEW_ARRIVAL
}


model Product {
  id          String  @id @default(uuid())
  name        String
  slug        String  @unique
  description String?
  imageUrl    String?
  price       Decimal @db.Decimal(12, 2)
  label       ProductLabel?
  categoryId String
  category   Category @relation(fields: [categoryId], references: [id])

  
  images    ProductImage[]
  colors    ProductColor[]
  sizeStocks ProductSizeStock[] 
  orders    OrderItem[]
  cartItems CartItem[]
  reviews   Review[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("products")
}

model ProductSizeStock {
  id        String  @id @default(uuid())
  productId String
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)
  size      String
  stock     Int     @default(0)

  @@unique([productId, size])
  @@map("product_size_stocks")
}

model ProductImage {
  id        String  @id @default(uuid())
  url       String
  order     Int     @default(0)
  publicId  String?  

  productId String
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())

  @@map("product_images")
}

model ProductColor {
  id   String @id @default(uuid())
  name String
  hex  String

  productId String
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())

  @@map("product_colors")
}

model Review {
  id        String  @id @default(uuid())
  userId    String
  productId String
  rating    Int
  comment   String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user    User    @relation(fields: [userId], references: [id])
  product Product @relation(fields: [productId], references: [id])

  @@unique([userId, productId])
  @@map("reviews")
}

// ------Cart & CartItem Models------//
model Cart {
  id     String @id @default(uuid())
  userId String @unique
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  items CartItem[]

  @@map("carts")
}

model CartItem {
  id String @id @default(uuid())

  cartId    String
  cart      Cart    @relation(fields: [cartId], references: [id])
  productId String
  product   Product @relation(fields: [productId], references: [id])

  quantity Int @default(1)
  size    String?
  color   String?

  @@unique([cartId, productId, size, color]) //cartId dan productId harus unik, artinya satu produk hanya bisa ada satu kali di cart yang sama
  @@map("cart_items")
}

//  ---- Voucher & Discount Models-----//
enum DiscountType {
  PERCENTAGE
  FIXED_AMOUNT
}

model Voucher {
  id                String       @id @default(uuid())
  code              String       @unique
  description       String?
  discountType      DiscountType
  discountValue     Decimal      @db.Decimal(12, 2)
  minPurchaseAmount Decimal?     @db.Decimal(12, 2)
  maxDiscountAmount Decimal?     @db.Decimal(12, 2)
  quota             Int
  expiresAt         DateTime
  createdAt         DateTime     @default(now())

  order Order[]

  @@map("vouchers")
}

// ------Order & OrderItem Models------//
enum OrderStatus {
  PENDING
  PAID
  SHIPPED
  DELIVERED
  COMPLETED
  CANCELED
}

model Order {
  id     String @id @default(uuid())
  userId String
  user   User   @relation(fields: [userId], references: [id])

  voucherId String?
  voucher   Voucher? @relation(fields: [voucherId], references: [id])

  total           Decimal     @db.Decimal(12, 2)
  discountTotal   Decimal     @db.Decimal(12, 2)
  grandTotal      Decimal     @db.Decimal(12, 2)
  status          OrderStatus @default(PENDING)


  recipientName  String
  recipientPhone String
  shippingAddress String

  createdAt       DateTime    @default(now())
  updatedAt       DateTime    @updatedAt

  items   OrderItem[]
  payment Payment?

  @@map("orders")
}

model OrderItem {
  id        String  @id @default(uuid())
  orderId   String
  productId String
  quantity  Int
  price     Decimal @db.Decimal(12, 2)
  size      String?   
  color     String?  

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  order   Order   @relation(fields: [orderId], references: [id])
  product Product @relation(fields: [productId], references: [id])

  @@map("order_items")
}

enum PaymentStatus {
  PENDING
  SUCCESS
  FAILED
  EXPIRED
}

model Payment {
  id String @id @default(uuid())

  orderId String  @unique
  order   Order   @relation(fields: [orderId], references: [id])
  amount  Decimal @db.Decimal(12, 2)

  provider   String
  method     String?
  externalId String?

  paymentUrl String?
  status     PaymentStatus @default(PENDING)
  paidAt     DateTime?
  rawPayload Json?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("payments")
}
