//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  name String
  password String [not null]
  role Role [not null, default: 'USER']
  isActive Boolean [not null, default: true]
  orders orders [not null]
  cart carts
  reviews reviews [not null]
  refreshTokens refresh_tokens [not null]
  passwordResetTokens password_reset_tokens [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table password_reset_tokens {
  id String [pk]
  token String [unique, not null]
  userId String [not null]
  expiresAt DateTime [not null]
  used Boolean [not null, default: false]
  user users [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table refresh_tokens {
  id String [pk]
  token String [unique, not null]
  userId String [not null]
  expiresAt DateTime [not null]
  revoked Boolean [not null, default: false]
  user users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table categories {
  id String [pk]
  name String [not null]
  slug String [unique, not null]
  imageUrl String
  publicId String
  products products [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table products {
  id String [pk]
  name String [not null]
  slug String [unique, not null]
  description String
  imageUrl String
  price Decimal [not null]
  label ProductLabel
  categoryId String [not null]
  category categories [not null]
  images product_images [not null]
  colors product_colors [not null]
  sizeStocks product_size_stocks [not null]
  orders order_items [not null]
  cartItems cart_items [not null]
  reviews reviews [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table product_size_stocks {
  id String [pk]
  productId String [not null]
  product products [not null]
  size String [not null]
  stock Int [not null, default: 0]

  indexes {
    (productId, size) [unique]
  }
}

Table product_images {
  id String [pk]
  url String [not null]
  order Int [not null, default: 0]
  publicId String
  productId String [not null]
  product products [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table product_colors {
  id String [pk]
  name String [not null]
  hex String [not null]
  productId String [not null]
  product products [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table reviews {
  id String [pk]
  userId String [not null]
  productId String [not null]
  rating Int [not null]
  comment String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  product products [not null]

  indexes {
    (userId, productId) [unique]
  }
}

Table carts {
  id String [pk]
  userId String [unique, not null]
  user users [not null]
  items cart_items [not null]
}

Table cart_items {
  id String [pk]
  cartId String [not null]
  cart carts [not null]
  productId String [not null]
  product products [not null]
  quantity Int [not null, default: 1]
  size String
  color String

  indexes {
    (cartId, productId, size, color) [unique]
  }
}

Table vouchers {
  id String [pk]
  code String [unique, not null]
  description String
  discountType DiscountType [not null]
  discountValue Decimal [not null]
  minPurchaseAmount Decimal
  maxDiscountAmount Decimal
  quota Int [not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  order orders [not null]
}

Table orders {
  id String [pk]
  userId String [not null]
  user users [not null]
  voucherId String
  voucher vouchers
  total Decimal [not null]
  discountTotal Decimal [not null]
  grandTotal Decimal [not null]
  status OrderStatus [not null, default: 'PENDING']
  recipientName String [not null]
  recipientPhone String [not null]
  shippingAddress String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  items order_items [not null]
  payment payments
}

Table order_items {
  id String [pk]
  orderId String [not null]
  productId String [not null]
  quantity Int [not null]
  price Decimal [not null]
  size String
  color String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  order orders [not null]
  product products [not null]
}

Table payments {
  id String [pk]
  orderId String [unique, not null]
  order orders [not null]
  amount Decimal [not null]
  provider String [not null]
  method String
  externalId String
  paymentUrl String
  status PaymentStatus [not null, default: 'PENDING']
  paidAt DateTime
  rawPayload Json
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum Role {
  USER
  ADMIN
}

Enum ProductLabel {
  BEST_SELLER
  NEW_ARRIVAL
}

Enum DiscountType {
  PERCENTAGE
  FIXED_AMOUNT
}

Enum OrderStatus {
  PENDING
  PAID
  SHIPPED
  DELIVERED
  COMPLETED
  CANCELED
}

Enum PaymentStatus {
  PENDING
  SUCCESS
  FAILED
  EXPIRED
}

Ref: password_reset_tokens.userId > users.id

Ref: refresh_tokens.userId > users.id

Ref: products.categoryId > categories.id

Ref: product_size_stocks.productId > products.id [delete: Cascade]

Ref: product_images.productId > products.id [delete: Cascade]

Ref: product_colors.productId > products.id [delete: Cascade]

Ref: reviews.userId > users.id

Ref: reviews.productId > products.id

Ref: carts.userId - users.id [delete: Cascade]

Ref: cart_items.cartId > carts.id

Ref: cart_items.productId > products.id

Ref: orders.userId > users.id

Ref: orders.voucherId > vouchers.id

Ref: order_items.orderId > orders.id

Ref: order_items.productId > products.id

Ref: payments.orderId - orders.id